--- a/src/routes/Login.module.css
+++ b/src/routes/Login.module.css
@@ -1,25 +1,22 @@
 .container {
-  padding: 1rem 1.5rem;
-  background-color: #f0f0f0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding: 3rem 1.5rem;
+  text-align: center;
 }
 
-.logo {
-  font-size: 1.5rem;
-  margin: 0;
+.title {
+  margin-bottom: 3rem;
 }
-.logo a {
-  color: #006cd1;
-  text-decoration: none;
+.titleIcon {
+  display: block;
+  font-size: 4rem;
 }
 
 .button {
-  padding: 0.3rem 0.5rem 0.33rem;
+  padding: 0.3em 0.5em 0.33em;
   background: #fff;
   border: 1px solid #ddd;
   cursor: pointer;
+  font-size: 2rem;
 }
 .button:hover,
 .button:focus {
