--- a/src/components/PlaylistItem.module.css
+++ b/src/components/PlaylistItem.module.css
@@ -1,9 +1,15 @@
 .item {
   padding: 1rem 1.5rem;
-  cursor: pointer;
+}
+.itemOpen {
+  background-color: #f9f9f9;
 }
 .item:hover {
   background-color: #f9f9f9;
+}
+
+.clickable {
+  cursor: pointer;
 }
 
 .name {
@@ -27,4 +33,17 @@
 
 .owner {
   margin-right: 0.6rem;
+}
+
+.button {
+  background: none;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  transition: transform 0.1s ease-out;
+}
+.button:hover {
+  transform: scale(1.2);
 }
